--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
         <button class="dropbtn">Le Lycée</button>
         
         <div class="dropdown-content">
-          <a href="#">test</a>
+          <a href="#">Link 1</a>
         </div>
     </div>
     
